--- a/githubsetuppage.html
+++ b/githubsetuppage.html
@@ -1,4 +1,6 @@
-<!-- How to build a basic website -->
+git config --global user.name "BreadBonklin"
+git config --global user.email brettdc7@byui.edu
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,13 +8,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Brett</title>
-    <link rel="stylesheet" href="aboutme.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <p id="one">
-        Hi my name is Brett im from Virginia.
-    </p>
+    <p>Hello World!</p>
 </body>
 </html>
