--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -14,5 +14,9 @@
     <p id="one">
         Hi my name is Brett im from Virginia.
     </p>
+    <p id="two">
+        This is crazy!
+    </p>
+    <img src="images/audi.jpg" alt="'86 Audi - Quattro">
 </body>
 </html>
