Updated about me and wwr htlm

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <p id="one">
-        Hi my name is Brett im from Virginia.
+        I love you Gracie!
     </p>
     <p id="two">
-        This is crazy!
+        I just built a website!
     </p>
     <img src="images/audi.jpg" alt="'86 Audi - Quattro">
 </body>
