--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,28 +10,31 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
-    <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
+    <h1>White Water Rafting Site Plan</h1>
+    <h2>Brett Conklin</h2>
+    <h2>WDD 130-1</h2>
   </header>
+
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
+
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
-    <!-- change this -->
+    <p> We are aiming to enrich and excite peoples lives by providing an adventure!
+      Our goal is to help people of all ages to get outdoors and experience the excitment of nature!
+      We engage in preservation, safety and fun while showing appreciation for nature and
+      our trips emphasize this while creating a fun memory!
+    </p>
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
-    <!-- change this -->
+    <p> Anyone of any age looking to have fun, get wet, and experience excitement with friends and family!
+    </p>
 
     <hr />
     <h2>Branding</h2>
-    <h3>Website Logo</h3>
+    <h3>Grand River Rafting</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/raftinglogo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -43,7 +46,7 @@
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
     <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      target="_blank">https://coolors.co/586ba4-324376-f5dd90-f68e5f-f76c5e</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +57,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">[#586BA4]</td>
+        <td class="secondary">[#324376]</td>
+        <td class="accent1">[#F5DD90]</td>
+        <td class="accent2">[#F76C5E]</td>
       </tr>
     </table>
 
@@ -67,11 +70,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Orelega One
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Orelega One
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
