Pushing all images and wwr index to git

--- a/lesson01/aboutme/index.html
+++ b/lesson01/aboutme/index.html
@@ -6,17 +6,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message for Gracie</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="aboutme.css">
 </head>
 
 <body>
-    <p id="one">
-        I love you Gracie!
-    </p>
-    <p id="two">
-        I just built a website!
-    </p>
-    <img src="images/audi.jpg" alt="'86 Audi - Quattro">
+    <h1>Lesson 1 Links</h1>
+    <ul>
+        <li><a href="./images/audi.jpg">Audi Picture</a>
+        </li>
+    </ul>
+    
+    
 </body>
 </html>
