--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     
     <h3>Lesson 3 Links</h3>
     <ul>
-        <li><a href="./lesson03/wwr/site-plan-rafting.html">White Water Rafting Project</a>
+        <li>
+            <a href="./lesson03/wwr/index.html">White Water Rafting Project</a>
         </li>
     </ul>
 
