update homepage siteplan

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Lesson 2 Links</h2>
     
     <h3>Lesson 3 Links</h3>
-        <a href="./lesson03/wwr/index.html">White Water Rafting Project</a>
+        <a href="lesson03/wwr/index.html">White Water Rafting Project</a>
 
 </body>
 </html>
