--- a/lesson03/wwr/index.html
+++ b/lesson03/wwr/index.html
@@ -5,73 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grand River Rafting - Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-<header>
-    <a id="logo_link" href="index.html">
-        <img src="./images/raftinglogo.png" alt="Grand River Rafting - Logo">
-    </a>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
-        <A href="contactus.html">Contact Us</A>
-    </nav>
-</header>
-<div id="hero">
-    <div id="hero-box">
-        <img id="hero-img" src="images/hero.png" alt="People being dumped from raft">
-    </div>
-    <section id="hero-msg">
-        <h1 class="home-title">Have an Adventure></h1>
-        <h4>Make Memories with Grand River Rafting</h4>
-        <div class="button-box">
-            <a class="book" href="contactus.html">Book Now</a>
+    <div id="content">
+        <header>
+            <a id="logo_link" href="index.html">
+                <img src="./images/raftinglogo.png" alt="Grand River Rafting - Logo", width="150", height="150">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <A href="contactus.html">Contact Us</A>
+            </nav>
+        </header>
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="images/hero.png" alt="People being dumped from raft", width="1600", height="1000">
+            </div>
+            <section id="hero-msg">
+                <h1 class="home-title">Have an Adventure</h1>
+                <h4>Make Memories with Grand River Rafting</h4>
+                <div class="button-box">
+                    <a class="book" href="contactus.html">Book Now</a>
+                </div>
+            </section>
         </div>
-    </section>
-</div>
 
-<main class="home-grid">
-    <section class="rivers-card">
-        <img class="card-img" src="images/rivers.jpg" alt="iver in foreset">
-        <img class="icon" src="images/river_icon.png" alt="river icon">
-        <h2>Rivers</h2>
-    </section>
-    <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg" alt="tent in mountian">
-        <img class="icon" src="images/fire_icon.png" alt="fire icon">
-        <h2>Camping</h2>
-    </section>
-    <section class="rapids-card">
-        <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-        <img class="icon" src="images/oars.png" alt="oars icon">
-        <h2>Rapids</h2>
-    </section>
-    <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
-    <section class="msg">
-        <h2>More Than Just the Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From Valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-        <a class="join" href="rivers.hrml">Join Us</a>
-    </section>
-</main>
-<footer>
-    <h3>Dry Oar &copy; 2022 - Brett Conklin</h3>
-    <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-    <h3><a href="contactus.html">Contact Us</a></h3>
-    <div class="social">
-        <a href="https://facebook.com">
-            <img src="images/facebook.png" alt="fb icon">
-        </a>
-        <a href="https://twitter.com">
-            <img src="images/twitter.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com">
-            <img src="images/instagram.png" alt="instagram icon">
-        </a>
+        <main class="home-grid">
+            <section class="rivers-card">
+                <img class="card-img" src="images/rivers.jpg" alt="iver in foreset">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping-card">
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountian">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids-card">
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+            <div id="background"></div>
+            <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
+            <section class="msg">
+                <h2>More Than Just the Thrill</h2>
+                <p>The infinite bounds of barreling blue swells are limited only by your imagination.
+                    Kick out the sand, pump up the tunes, and rip into some rapids.
+                    We'll keep the fast times spinning. The rapids are calling.
+                </p>
+                <a class="join" href="rivers.hrml">Join Us</a>
+            </section>
+        </main>
+        <footer>
+            <h3>Dry Oar &copy; 2022 - Brett Conklin</h3>
+            <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
+            <h3><a href="contactus.html">Contact Us</a></h3>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+
     </div>
-</footer>
-
-
 </body>
 
 
