--- a/lesson03/wwr/index.html
+++ b/lesson03/wwr/index.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img src="./images/raftinglogo.png" alt="Grand River Rafting - Logo", width="150", height="150">
+                <img src="./images/raftinglogo.png" alt="Grand River Rafting - Logo" width="150" height="150">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -22,7 +22,7 @@
         </header>
         <div id="hero">
             <div id="hero-box">
-                <img id="hero-img" src="images/hero.png" alt="People being dumped from raft", width="1600", height="1000">
+                <img id="hero-img" src="images/hero.png" alt="People being dumped from raft" width="1600" height="1000">
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have an Adventure</h1>
