Personal Site Plan - Content

--- a/recipes/site-plan.html
+++ b/recipes/site-plan.html
@@ -36,7 +36,7 @@
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
-      <img src="./images/logo.jpeg" alt="Grand River Rafting - Logo" width="150" height="150">
+      <img src="./images/logo.jpeg" alt="Dorm Dining - Logo" width="150" height="150">
       <hr>
 
 
@@ -53,18 +53,17 @@
         <tr><td class="primary">[#076ae1]</td><td class="secondary">[#2c2c2c]</td><td class="accent1">[#ffffff]</td><td class="accent2">[#969a97]</td></tr>
       </table>
 
-      <!-- ------------------------Step 9------------------------------ -->
+
 
       <h3>
         Typography
       </h3>
-      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Lato  <!-- change this -->
+        Heading Font: Lato
       </h4>
       <h4>
-        Paragraph Font: Lato  <!-- change this -->
+        Paragraph Font: Lato
       </h4>
       <h3>
         Normal paragraph example
@@ -79,16 +78,16 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
       </p>
 
-      <!-- ------------------------Step 10------------------------------ -->
+
 
       <h3>
         Navigation
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Recipes - Home</a>
+        <a href="#">Add Recipe</a>
+        <a href="#">Recipe 1</a>
       </nav>
       <hr>
       <h2>
@@ -96,13 +95,13 @@
       </h2>
       <div class="sitemap">
         <div class="sm-home">
-          Home
+          Recipes - Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Add Recipe
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Recipe 1
         </div>
 
         <div class="top">
@@ -117,36 +116,79 @@
 
       </div>
 
-      <!-- --------Content Section -------------- -->
+
+
       <hr>
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Recipes - Home</h3>
       <p>
-        [Written copy for the home page here]
+        My Recipes:
+        Asian Chicken Lettuce Wraps - img
+        Buttered Chicken Curry - img
+        Caesar Salad Spring Rolls - img
+        Cheese Potato Soup - img
+        Chicken Piccata - img
+        Chicken Fajitas - img
+        Creamy Potato Pasta - img
+        Enchiladas Verdes - img
+        Steak Quesojitas - img
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="./images/logo.jpeg" alt="page logo" width="150" height="150">
+        <img src="./images/lettuce-wraps.jpg" alt="Asian Chicken Lettuce Wrap" width="500" height="300">
+        <img src="./images/buttered-chicken.jpg" alt="Buttered Chicken" width="500" height="300">
+        <img src="./images/salad-rolls.jpg" alt="Salad Rolls" width="500" height="300">
+        <img src="./images/potato-soup.jpg" alt="Potato Soup" width="500" height="500">
+        <img src="./images/chicken-picatta.jpg" alt="Chicken Piccata" width="500" height="500">
+        <img src="./images/chicken-fajitas.jpg" alt="Chicken Fahitas" width="500" height="300">
+        <img src="./images/creamy-pasta.jpg" alt="Creamy Pasta" width="500" height="300">
+        <img src="./images/enchiladas-verdes.jpg" alt="Enchiladas Verdes" width="500" height="300">
+        <img src="./images/steak-quesodillas.jpg" alt="Steak Quesojitas" width="500" height="300">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Add Recipe</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Recipe Photo:
+        Recipe Name:
+        Ingredients:
+        Instructions:
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
+        <img src="./images/logo.jpeg" alt="page logo" width="150" height="150">
         <img src="#" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Recipe 1</h3>
       <p>
-        [Written copy for the Page 3 here]
+      Asian Chicken Lettuce Wraps
+      Ingredients:
+      3 tsp Olive Oil
+      4-5 tbsp Hoisin Sauce
+      1 tbsp Soy Sauce2 tsp Sriracha
+      1 tbsp Rice Vinegar
+      1 1/2 tsp Sesame Oil
+      1 tsp Honey
+      1 tbsp Minced Garlic
+      1 tbsp Minced Ginger
+      2/3 cup diced Green Onion
+      1 medium Diced Carrot
+      1 can chopped Water Chestnuts
+      1 head of Iceburg Lettuce
+
+      Instructions:
+      1) Heat 1 1/2 tsp oil in pan
+      2) Add ground chicken and separate as it cooks
+      3) Whisk hoisin sauce, soy sauce, sriracha, rice vinegar, sesame oil and honey
+      4) Drain liquid from chicken(move to one side of pan)
+      5) Heat remaining 1 1/2 tsp oil in empty side of pan
+      6) Add green onion and carrots add in garlic and ginger after cooked at the end
+      7) Pour in sauce and water chestnuts and cook for about 45 seconds and mix chicken, sauce and veggies
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="./images/lettuce-wraps.jpg" alt="Asian Chicken Lettuce Wrap" width="500" height="300">
+        <img src="./images/logo.jpeg" alt="page logo" width="150" height="150">
 
       </ul>
       <hr>
@@ -156,19 +198,19 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Home</h3>
+      <h3>Recipes - Home</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Add Recipe</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Recipe 1</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
