final edits to page 2 of rafting site and personal site wireframes

--- a/recipes/site-plan.html
+++ b/recipes/site-plan.html
@@ -137,7 +137,7 @@
       </p>
       <p>Images for the Home page</p>
 
-      
+
         <img src="./images/logo.jpeg" alt="page logo" width="150" height="150">
         <img src="./images/lettuce-wraps.jpg" alt="Asian Chicken Lettuce Wrap" width="500" height="300">
         <img src="./images/buttered-chicken.jpg" alt="Buttered Chicken" width="500" height="300">
@@ -200,23 +200,23 @@
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
 
-      <h3>Recipes - Home</h3>
+      <h3>Recipes - Home</h3>   <!---https://gomockingbird.com/projects/220aa6c/4gXVnC-->
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Home page with links to child pages and recipes listed
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="./images/homewireframe.png" alt="home page wireframe" width="250" height="300">
 
       <h3>Add Recipe</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Same header as homepage. Image of recipe. Text boxes to add ingredients and instructions for the recipe
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="./images/addwireframe.png" alt="Add recipe wireframe" width="250" height="300">
 
       <h3>Recipe 1</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Same header as homepage. Image of recipe. Displays directions and ingredients needed.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="./images/recipewireframe.png" alt="Add recipe wireframe" width="250" height="300">
     </main>
   </body>
 
