--- a/lesson03/wwr/index.html
+++ b/lesson03/wwr/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <div id="content">
-        <header>
+        <header> 
             <a id="logo_link" href="index.html">
                 <img src="./images/raftinglogo.png" alt="Grand River Rafting - Logo" width="150" height="150">
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="page2.html">Page 2</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <A href="contactus.html">Contact Us</A>
             </nav>
