--- a/recipes/add-recipe.html
+++ b/recipes/add-recipe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add a Recipe</title>
+    <link rel="stylesheet" href="styles/add-recipe.css">
 </head>
 <body>
     <header> 
