--- a/recipes/index.html
+++ b/recipes/index.html
@@ -15,8 +15,8 @@
         <h1 class="home-title">Dorm Dining</h1>
         <h2 class="home-message">Affordable cooking for the thrifty college student!</h2>
         <nav>
-            <a href="index.html">Home Page</a>
-            <A href="add-recipe.html">Add Recipe</A>
+            <a href="index.html"style="color: white">Home Page</a>
+            <A href="add-recipe.html"style="color: white">Add Recipe</A>
             <div calss="top-search">
                 <input type="text" placeholder="Search...">
             </div>
@@ -24,7 +24,7 @@
     </header>
     <main class="home-grid">
         <section class="lettuce-wraps-card">
-            <h2><a href="lettuce-wrap-recipe.html">Lettuce Wraps</a></h2>
+            <h2><a href="lettuce-wrap-recipe.html"style="color: white">Lettuce Wraps</a></h2>
             <img class="card-img" src="images/lettuce-wraps.jpg" alt="Lettuce Wraps" width="1200" height="600">
         </section>
         <section class="butter-chicken-card">
@@ -38,8 +38,8 @@
     </main>
     <footer>
         <h3>Dorm Dining &copy; 2022 - Brett Conklin</h3>
-        <h3><a href="site-plan.html">Site Plan</a></h3>
-        <h3><a href="contactus.html">Contact Us</a></h3>
+        <h3><a href="site-plan.html"style="color: white">Site Plan</a></h3>
+        <h3><a href="contactus.html"style="color: white">Contact Us</a></h3>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
