--- a/recipes/lettuce-wrap-recipe.html
+++ b/recipes/lettuce-wrap-recipe.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lettuce Wrap</title>
+    <link rel="stylesheet" href="styles/lettuce-wrap.css">
 </head>
 <body>
     <header> 
@@ -23,8 +24,8 @@
     </header>
     <main class="home-grid">
         <section class="lettuce-wraps-card">
-            <h2><a href="recipe.html">Lettuce Wraps</a></h2>
-            <img class="card-img" src="images/lettuce-wraps.jpg" alt="Lettuce Wraps" width="1200" height="600">
+            <h2><a href="recipe.html"style="color: white">Lettuce Wraps</a></h2>
+            <img class="card-img" src="images/lettuce-wraps.jpg" alt="Lettuce Wraps" width="700" height="400">
         
         </section>
         <section>
@@ -55,32 +56,16 @@
                     1 can chopped Water Chestnuts 
                     1 head of Iceburg Lettuce
                 </p2>
-                <a class="join" href="rivers.hrml">Join Us</a>
             </section>
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     </main>
     <footer>
         <h3>Dorm Dining &copy; 2022 - Brett Conklin</h3>
-        <h3><a href="site-plan.html">Site Plan</a></h3>
-        <h3><a href="contactus.html">Contact Us</a></h3>
+        <h3><a href="site-plan.html"style="color: white">Site Plan</a></h3>
+        <h3><a href="contactus.html"style="color: white">Contact Us</a></h3>
         <div class="social">
-            <a href="https://facebook.com" target="_blank">
+            <a href="https://facebook.com"target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
